--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,11 @@ license = "MIT"
 repository = "https://github.com/florianvazelle/imextras"
 
 [workspace.dependencies]
-imgui-sdl3 = { path = "crates/imgui-sdl3" }
-imgui = "0.12.0"
-sdl3 = "0.15.1"
-shaderc = "0.9.1"
-mint = "0.5.9"
-glam = "0.30.5"
-serde = "1.0.225"
-toml = "0.9.6"
+imgui = "0.12"
+sdl3 = "0.15"
+shaderc = "0.9"
+mint = "0.5"
+glam = "0.30"
+serde = "1.0"
+toml = "0.9"
+imgui-sdl3 = "0.4"
